navbar switched to white, fixed cover bg on mobile

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -66,25 +66,25 @@ a:focus {
     border-bottom: 1px solid rgba(255,255,255,.3);
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    background-color: #000;
+    background-color: white;
 }
 
-.navbar-custom .navbar-brand {
+.navbar-custom {
     font-weight: 700;
 }
 
-.navbar-custom .navbar-brand:focus {
+.navbar-custom:focus {
     outline: 0;
 }
 
-.navbar-custom .navbar-brand .navbar-toggle {
+.navbar-custom .navbar-toggle {
     padding: 4px 6px;
     font-size: 16px;
-    color: #fff;
+    color: black;
 }
 
-.navbar-custom .navbar-brand .navbar-toggle:focus,
-.navbar-custom .navbar-brand .navbar-toggle:active {
+.navbar-custom .navbar-toggle:focus,
+.navbar-custom .navbar-toggle:active {
     outline: 0;
 }
 
@@ -136,7 +136,11 @@ a:focus {
     .navbar-custom.top-nav-collapse {
         padding: 0;
         border-bottom: 1px solid rgba(255,255,255,.3);
-        background: #000;
+        background: white;
+    }
+
+    .navbar-custom.top-nav-collapse a {
+        color: black;
     }
 }
 
@@ -155,18 +159,17 @@ a:focus {
     -o-background-size: cover;
 }
 
-.intro .intro-body {
-    display: table-cell;
-    vertical-align: bottom;
-    padding-bottom: 5%;
-}
-
-.intro .intro-body .brand-heading {
-    font-size: 40px;
-}
-
-.intro .intro-body .intro-text {
-    font-size: 18px;
+@media(max-width:767px) {
+    .navbar-custom a {
+        color: black;
+    }
+    .intro .intro-body {
+        display: none;
+    }
+    .intro {
+        height: 100%;
+        padding: 0;
+    }
 }
 
 @media(min-width:768px) {
@@ -175,12 +178,10 @@ a:focus {
         padding: 0;
     }
 
-    .intro .intro-body .brand-heading {
-        font-size: 100px;
-    }
-
-    .intro .intro-body .intro-text {
-        font-size: 26px;
+    .intro .intro-body {
+        display: table-cell;
+        vertical-align: bottom;
+        padding-bottom: 5%;
     }
 }
 
